--- a/paper.Rmd
+++ b/paper.Rmd
@@ -47,13 +47,13 @@ Por otro lado, se plantea que las cifras macroeconómicas no reflejan la realida
 
 ![](input/images/tratoPNUD.png){ width=80%}
 
-Ante la paradoja de mejoras en aspectos objetivos acompañados de un fuerte malestar subjetivo, surge la pregunta sobre el vínculo entre la desigualdad económica y su justificación: _¿Se percibe en Chile un cambio en los niveles de desigualdad? ¿Ha disminuido la tolerancia/justificación de la desigualdad en Chile? ¿Cómo se relacionan los cambios en la justificación de desigualdad con preferencias por redistribución económica?_
+Ante la paradoja de mejoras en aspectos objetivos acompañados de un fuerte malestar subjetivo, surge la pregunta sobre el vínculo entre la desigualdad económica y su justificación: _¿Se percibe en Chile un cambio en los niveles de desigualdad? ¿Ha disminuido la tolerancia/justificación de la desigualdad en Chile?_
 
 El presente trabajo representa la proyección de una línea de investigación sobre percepción y justificación de desigualdad en Chile iniciada el año 2009 [@castillo_cual_2009; @castillo_inequality_2012]. Parte de estos estudios han analizado dimensiones subjetivas de la desigualdad entre 1999 y 2009, y en este documento se prentende avanzar agregando una década más al análisis gracias a la reciente disponibilidad de los datos para Chile del estudio ISSP 2019 (International Social Survey Programme - www.issp.org).
 
-El trabajo comienza dando un contexto de los estudios sobre aspectos subjetivos de la desigualdad. Luego se presentan inicialmente descriptivos sobre percepción y justificación de desigualdad salarial entre 1999 y 2019, para luego finalizar con algunos modelos que permiten contrastar hipótesis sobre la relación entre percepción y justificación de desigualdad en el tiempo.
+El trabajo comienza dando un contexto de los estudios sobre aspectos subjetivos de la desigualdad. Luego se presentan inicialmente análisis descriptivos sobre percepción y justificación de desigualdad salarial entre 1999 y 2019, para luego finalizar con algunos modelos que permiten contrastar hipótesis sobre la relación entre percepción y justificación de desigualdad en el tiempo.
 
-El documento se estructura de la siguiente manera: en primer lugar se entregarán ciertos antecedentes conceptuales y empíricos para el estudio de percepción y justificación de desigualdad, para luego mostrar resultados comparativos en el tiempo. En la segunda parte se le dará énfasis a las relaciones de estatus objetivo y subjetivo con la percepción de desigualdad y también a los cambios de estas relaciones en el tiempo.
+El documento se estructura de la siguiente manera: en primer lugar se entregarán ciertos antecedentes conceptuales y empíricos para el estudio de percepción y justificación de desigualdad, para luego mostrar resultados comparativos en el tiempo. En la segunda parte se le dará énfasis a las relaciones entre variables de estatus y percepción/justificación de desigualdad, así como también a los cambios de estas relaciones en el tiempo.
 
 # Percepción y justificación de desigualdad
 
@@ -61,13 +61,13 @@ Los estudios de desigualdad y justicia social han sido nutridos desde múltiples
 
 Desde la sociología se ha dado tradicionalmente un acento empírico al estudio de la desigualdad. Esta disciplina no solo tempranamente abordó el estudio de la distribución objetiva de los recursos en una población, sino que también pueden observarse reflexiones en torno al modo en cómo los sujetos perciben y  justifican la desigualdad existente [@kluegel_beliefs_1986; @kluegel_social_1995-1; @huber_Income_1973; @mason_Marketing_2000; @mau_Ungleichheitsund_1997; @stollte_Legitimation_1983]. De manera más reciente, se han incorporado a este tipo de estudios el concepto de actitudes y percepciones hacia la desigualdad económica, relacionando dichos conceptos con la justificación de la desigualdad [@ardanaz_preferences_2009; @evans_justifications_2010; @gijsberts_legitimation_1999-1; @hadler_why_2005; @janmaat_subjective_2013-1; @kenworthy_inequality_2007; @kuhn_subjective_2005; @liebig_justice_2013] .
 
-El estudio de la desigualdad en términos subjetivos se puede abordar desde distintas perspectivas y metodologías. Una línea que posee un claro énfasis comparativo es la que se establece mediante el International Social Justice Project, que realiza la primera encuesta comparativa internacional en temas de justicia y desigualdad en países capitalistas y postcomunistas en el año 1991 [@kluegel_social_1995-1]. Desde ese entonces un desafío en este tipo de investigación tiene que ver con la manera de abordar el tema de desigualdad. Uno de estos desafíos se refiere a qué preguntar respecto de la desigualdad, ya que en general la mayor parte de la población actualmente tiende  declarar una alta desigualdad, generando escasa variabilidad y por lo tanto haciendo difícil capturar diferencias entre personas y en el tiempo  [@castillo_percepcion_2012]. Al respecto, una posible alternativa para analizar tanto percepción como justificación de desigualdad mediante encuestas consiste en medidas indirectas de desigualdad salarial subjetiva, conocidas como brechas salariales percibidas y justas [@castillo_cual_2009]:
+El estudio de la desigualdad en términos subjetivos se puede abordar desde distintas perspectivas y metodologías. Una línea que posee un claro énfasis comparativo es la que se establece mediante el International Social Justice Project, que realiza la primera encuesta comparativa internacional en temas de justicia y desigualdad en países capitalistas y postcomunistas en el año 1991 [@kluegel_social_1995-1]. Desde ese entonces un desafío en este tipo de investigación tiene que ver con la manera de abordar el tema de desigualdad. Uno de estos desafíos  refiere a la poca varianza que genera preguntar directamente qué tan desigual consideran el país, pues, ante dicha pregunta, la gran mayoría de las personas responden que perciben mucha desigualdad, lo que hace difícil capturar las diferencias entre las personas y en el tiempo  [@castillo_percepcion_2012]. Al respecto, una posible alternativa para analizar tanto percepción como justificación de desigualdad mediante encuestas consiste en medidas indirectas de desigualdad salarial subjetiva, conocidas como brechas salariales percibidas y justas [@castillo_cual_2009]:
 
 **Figura 3**: Diagrama de brechas salariales [@castillo_inequality_2012]
 
 ![](input/images/gaps.png){ width=70% }
 
-Para poder operacionalizar estas brechas, se utilizan preguntas respecto de salarios percibidos y justos en relación a ocupaciones que expresan los extremos del continuo de estatus, como obrero y gerente. Las respuestas son registradas como una magnitud en pesos, y luego con estas respuestas es posible elaborar las brechas percibidas y justas, dividiendo el monto otorgado al gerente por el monto del obrero. Esta magnitud expresa cuánto más se percibe o justifica que un gerente gana respecto de un obrero.
+Para poder operacionalizar estas brechas, se utilizan preguntas respecto de salarios percibidos y justos en relación a ocupaciones que expresan los extremos del continuo de estatus, como obrero no calificado y gerente. Las respuestas son registradas como una magnitud en moneda nacional (en el caso Chileno, pesos), y luego con estas respuestas es posible elaborar las brechas percibidas y justas, dividiendo el monto otorgado al gerente por el monto del obrero. Esta magnitud expresa cuánto más se percibe o justifica que un gerente gana respecto de un obrero.
 
 La evidencia anterior comparando datos de Chile para 1999 y 2009 indica que si bien existen cambios en los montos absolutos de salarios percibidos y justos, las brechas tanto percibidas como justas se mantienen en el tiempo. Además, tomando como base estudios que vinculan variables de estatus con percepción de desigualdad [@castillo_percepcion_2012; @wegener_equity_1990], se plantea que aquellos en el extremo superior de estatus poseen información más precisa de salarios de ocupaciones de mayor prestigio, y por lo tanto su brecha salarial percibida será mayor.
 
@@ -88,7 +88,7 @@ En general las teorías respecto a los determinantes de las preferencias conside
 
 Los datos a utilizar son parte de la encuesta International Social Survey Programme (ISSP). El ISSP es un proyecto de colaboración internacional sobre encuestas que cubre una gran variedad de temas  relevantes para las ciencias sociales (como desigualdad, rol del gobierno, género, redes sociales). Comenzó en 1985 en cuatro paises (Alemania, Estados Unidos, Gran Bretaña y Australia), y hasta ahora se ha ampliado para incluir más de 40 países. Dado su carácter colaborativo, cada país miembro debe contribuir con fondos para implementar la encuesta, y generalmente el el cuestionario ISSP se administra como parte de las encuestas nacionales existentes. En el caso chileno, las encuestas son gestionadas por el Centro de Estudios Publicos (CEP).
 
-Cada año, la encuesta cubre un tema en particular que se repite unos años más tarde, permitiendo comparaciones en el tiempo. Los temas son decididos por un subcomité formado por representantes de los países participantes. Luego se escribe un cuestionario general en inglés para ser traducido más tarde en los idiomas específicos de cada contexto. Una vez que la información es recopilada y proporcionada por cada país, los datos se archivan en Gesis en Alemania, con soporte en el procesamiento de los datos de la ASEP (Análisis Sociológicos, Económicos y Políticos) en Madrid.
+Cada año, la encuesta cubre un tema en particular que se repite unos años más tarde, permitiendo comparaciones en el tiempo. Los temas son decididos por un subcomité formado por representantes de los países participantes. Luego se desarrolla un cuestionario general en inglés para ser traducido más tarde a los idiomas específicos de cada contexto. Una vez que la información es recopilada y proporcionada por cada país, los datos se archivan en Gesis en Alemania, con soporte en el procesamiento de los datos de la ASEP (Análisis Sociológicos, Económicos y Políticos) en Madrid.
 
 La desigualdad social fue el tema de investigación para los módulos del ISSP 1987, 1992, 1999, 2009 y 2019. Esta encuesta incluye una serie de ítems relacionados con la  distribución de ingreso, percepción de desigualdad, principios distributivos y expectativas sobre el papel del estado con respecto a la desigualdad social. La implementacion de este programa en Chile comienza en 1998,  y hasta la fecha, se cuenta con tres olas de la encuesta sobre desigualdad social(1999, 2009 y 2019). Las encuestas de 1999, 2009 y 2019 son representativas a nivel nacional, se realizan cara a cara e incorporan 1503, 1505 y 1380 casos, respectivamente.
 
@@ -114,13 +114,15 @@ En primer lugar se exponen las percepciones y justificaciones respecto a las dif
 
 ![**Grafico 1**: salario percibido de obrero y el gerente entre 1999 y 2019](output/images/salario_per.png){#fig:brechper}
 
-Lo primero que destaca del Gráfico 1 son los cambios en la percepción de salarios tanto para obreros como para gerentes, con un claro aumento en el tiempo. A primera vista lo más evidente es el aumento en la percepción del salario del gerente: el salario percibido del obrero solo aumento $210.000 entre estos años, mientras que el del gerente alcanza un incremento de $5.000.000. entre 1999 y 2019. No obstante, es relevante notar que el salario percibido del obrero creció más que el del gerente en términos proporcionales entre 1999 y 2009, puesto que mientras el primero aumenta más de tres veces, el segundo no alcanza a superar las 3 veces de aumento (incremento de 2,7).
+Lo primero que destaca del Gráfico 1 son los cambios en la percepción de salarios tanto para obreros como para gerentes, con un claro aumento en el tiempo. A primera vista lo más evidente es el aumento en la percepción del salario del gerente: el salario percibido del obrero solo aumento $210.000 entre estos años, mientras que el del gerente alcanza un incremento de $5.000.000 entre 1999 y 2019. No obstante, es relevante notar que el salario percibido del obrero creció más que el del gerente en términos proporcionales entre 1999 y 2009, puesto que mientras el primero aumenta más de tres veces, el segundo no alcanza a superar las 3 veces de aumento (incremento de 2,7).
 
-Ahora bien, ¿qué tanto calza la percepción de desigualdad con la mediana real de salarios para cada año? Para ello, utilizaremos datos oficiales de la encuesta de caracterización socioeconómica CASEN para los años respectivos (XX nota al pie con el detalle de los análisis). Los resultados se muestran en el gráfico siguiente:
+Ahora bien, ¿qué tanto calza la percepción de desigualdad con la mediana real de salarios para cada año? Para ello, utilizaremos datos oficiales de la encuesta de caracterización socioeconómica CASEN para los años respectivos. Los resultados se muestran en el gráfico siguiente:
+
+![**Grafico 2**: salario percibido de obrero y el gerente entre 1999 y 2019](output/images/table_perriager.png){#fig:brechper}
 
 Resulta interesante que la mediana del salario el obrero se aproxima bastante al monto del salario mínimo real del año respectivo (según datos del Ministerio de Desarrollo Social). Esto nos lleva a deducir dos cosas: primero, las personas son conscientes en general de los montos de salario mínimo y, segundo, que asocian el salario de un obrero al salario mínimo. En cuanto al salario percibido para el gerente, vemos que es en general subestimado en todos los años y además con un creciente aumento en este sesgo perceptual. Es relevante considerar además que el salario percibido del gerente posee una mayor varianza que el del obrero, lo que indica que hay un menor consenso en la población respecto a cuánto ganan las personas en estas ocupaciones. Esto puede deberse a los distintos tipos de gerente que se están imaginando las personas al responder. Por ejemplo, según el estudio de la empresa internacional @roberthalf_Guia_2019 (encargada de reclutar de gerentes para el área de finanzas) en Chile el salario de un director de finanzas de una PYME o mediana empresa varía entre $5.000.000 y $9.500.000, mientras que el gerente de una gran empresa (sobre UF 100.000) gana entre $6.800.000 y $15.500.000 en promedio. Esto nos demuestra que existe gran diferencia entre un alto cargo de una empresa pequeña en relación con los altos cargos de una gran empresa.
 
-En suma, tenemos que ha aumentado la percepción de dalarios de ocupaciones de bajo y alto estatus. Estos salarios percibidos no escapan radicalmente de la realidad, ya que coinciden con el salario mínimo establecido para Chile en el año respectivo así como también con la información disponible respecto a el salario que ganan los gerentes, pero sin embargo en el caso de los gerentes se aprecia una mayor variabilidad.
+En suma, tenemos que ha aumentado la percepción de salarios de ocupaciones de bajo y alto estatus. Estos salarios percibidos no escapan radicalmente de la realidad, ya que coinciden con el salario mínimo establecido para Chile en el año respectivo así como también con la información disponible respecto a el salario que ganan los gerentes, pero sin embargo en el caso de los gerentes se aprecia una mayor variabilidad.
 
 ## Salarios justos
 
